# LandWeaverServer

./: CHANGELOG.md  pyproject.toml  requirements.txt
Common/: ipc_packets.py  keys.py
Pipeline/: PipelineHandlers.py  client_rcv_loop.py  engine_resources.py  io_manager.py  job_loops.py  pipeline_engine.py  render_stack.py  shared_memory.py  system_config.py  thematic_render_cli.py  tile_dispatcher.py  worker_context_base.py
Render/: compositing_engine.py  compositing_library.py  factor_engine.py  factor_library.py  noise_library.py  render_config.py  schema.py  task_routines.py  theme_registry.py  utils.py
ThematicRender/: compositing_engine.py  compositing_library.py  config_mgr.py  engine_resources.py  factor_engine.py  factor_library.py  io_manager.py  ipc_packets.py  job_context.py  job_control.py  keys.py  noise_editor.py  noise_library.py  pipeline_engine.py  pipeline_tasks.py  qml_palette.py  raster_manager.py  reader_task.py  render_config.py  render_task.py  schema.py  settings.py  shared_memory.py  specs.py  surface_engine.py  surface_library.py  system_config.py  thematic_render_cli.py  theme_registry.py  tile_dispatcher.py  utils.py  worker_context_base.py  worker_contexts.py  writer_task.py
bkp/: tmp.py
design/: client_messaging.md  dataflow.md  editor_messages.md  error_handling.md  messaging.md  roadmap.md
docs/: README.md  brief.md  readme.md  rendering.md  roadmap.md  schema v2.md  surfaces.md  usage.md  xx.yml
landweaverserver/common/: challenge.py  ipc_packets.py  keys.py
tests/: daemon_server.py  test_refine_organic.py
(+37 files in other folders)
