[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "land-weaver-server"
version = "2.2.1"
description = "A programmable spatial compositing engine for transforming GIS rasters and categorical layers into refined, georeferenced cartographic surfaces."
authors = [{ name = "corb" }]
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT License" }

dependencies = [
    "numpy~=2.2.6",
    "YMLEditor~=1.7.1",
    "rasterio~=1.4.3",
    "scipy~=1.16.2",
    "PyYAML~=6.0.2",
    "tqdm~=4.67.1",
]

keywords = ["GIS", "cartography", "raster", "compositing", "geotiff"]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
lw-server = "landweaverserver.pipeline.lw_server:main"

[tool.setuptools]
license-files = ["LICENSE*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["landweaverserver*"]

[project.urls]
Repository = "https://github.com/corb555/LandWeaverServer"